MESSAGE("Generate sparse GPU GpuNUFFT Library (Freiburg)")

set(SPARSE_MEX_FILE tikreg_gpuNUFFT_gpu.cu ${CONFIG_INCLUDE})
set(SPARSE_MEX_FILE_FORW tikreg_gpuNUFFT_forward_gpu.cu ${CONFIG_INCLUDE})

CUDA_COMPILE( mex_gpuNUFFT_sparse_gen ${SPARSE_MEX_FILE} SHARED)
CUDA_COMPILE( mex_gpuNUFFT_sparse_forw_gen ${SPARSE_MEX_FILE_FORW} SHARED)

if(WIN32)
	CUDA_ADD_LIBRARY(${GRID_MEX_ADJ_SPARSE_NAME} SHARED ${mex_gpuNUFFT_sparse_gen} ${SPARSE_MEX_FILE})
else(UNIX)
	CUDA_ADD_LIBRARY(${GRID_MEX_ADJ_SPARSE_NAME} SHARED ${mex_gpuNUFFT_sparse_gen})
endif()
TARGET_LINK_LIBRARIES(${GRID_MEX_ADJ_SPARSE_NAME} ${MATLAB_MEX_LIBRARY} ${MATLAB_MX_LIBRARY} ${CUDA_LIBRARIES})
SET_TARGET_PROPERTIES(${GRID_MEX_ADJ_SPARSE_NAME} PROPERTIES PREFIX "" LINKER_LANGUAGE CXX)

CUDA_ADD_CUFFT_TO_TARGET(${GRID_MEX_ADJ_SPARSE_NAME})
CUDA_ADD_CUBLAS_TO_TARGET(${GRID_MEX_ADJ_SPARSE_NAME})

if(WIN32)
	CUDA_ADD_LIBRARY(${GRID_MEX_FORW_SPARSE_NAME} SHARED ${mex_gpuNUFFT_sparse_forw_gen} ${SPARSE_MEX_FILE_FORW})
else(UNIX)
	CUDA_ADD_LIBRARY(${GRID_MEX_FORW_SPARSE_NAME} SHARED ${mex_gpuNUFFT_sparse_forw_gen})
endif()

TARGET_LINK_LIBRARIES(${GRID_MEX_FORW_SPARSE_NAME} ${MATLAB_MEX_LIBRARY} ${MATLAB_MX_LIBRARY} ${CUDA_LIBRARIES})
SET_TARGET_PROPERTIES(${GRID_MEX_FORW_SPARSE_NAME} PROPERTIES PREFIX "" LINKER_LANGUAGE CXX)

CUDA_ADD_CUFFT_TO_TARGET(${GRID_MEX_FORW_SPARSE_NAME})
CUDA_ADD_CUBLAS_TO_TARGET(${GRID_MEX_FORW_SPARSE_NAME})

if(WIN32)
  SET_TARGET_PROPERTIES(${GRID_MEX_ADJ_SPARSE_NAME} PROPERTIES
						SUFFIX ${MEX_SUFFIX}
						LINK_FLAGS /export:mexFunction)
  SET_TARGET_PROPERTIES(${GRID_MEX_FORW_SPARSE_NAME} PROPERTIES
						SUFFIX ${MEX_SUFFIX}
						LINK_FLAGS /export:mexFunction)
else(UNIX)
  SET_TARGET_PROPERTIES(${GRID_MEX_ADJ_SPARSE_NAME} PROPERTIES SUFFIX ${MEX_SUFFIX})
  SET_TARGET_PROPERTIES(${GRID_MEX_FORW_SPARSE_NAME} PROPERTIES SUFFIX ${MEX_SUFFIX})  
endif()
